cmake_minimum_required(VERSION 3.0.0)
project(RetroShare)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Core)
find_package(Qt5Gui)
find_package(Qt5Widgets)
find_package(Qt5Multimedia)
find_package(Qt5Xml)
find_package(Qt5PrintSupport)

option(LTO "Build with link time optimization" OFF)
option(SQLCHIPHER "Build without database encryption" ON)
option(GNOME_KEYRING "Build with gnome keyring support" ON)

add_definitions(-DRS_USE_CIRCLES -DRS_USE_BITDHT -DRS_ENABLE_GXS -DSQLITE_HAS_CODEC -DRS_USE_LIBUPNP -DPATCHED_LIBUPNP -DTARGET="RetroShare06" -DDATA_DIR="/usr/share/RetroShare06" -DPLUGIN_DIR="/usr/lib/retroshare/extensions6")
set(SQLLIB sqlcipher)
if(NOT SQLCHIPHER)
  set(SQLLIB sqlite3)
  add_definitions(-DNO_SQLCHIPHER)
endif()
if(GNOME_KEYRING)
  set(OPTIONAL_LIBS gnome-keyring)
  add_definitions(-DUBUNTU)
  include_directories(/usr/include/gnome-keyring-1)
endif()
set(CMAKE_CXX_FLAGS -std=c++11)
add_compile_options(-fPIC)
if(LTO)
  add_compile_options(-flto)
  if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    add_compile_options(-emit-llvm)
  endif()
  set(CMAKE_EXE_LINKER_FLAGS
    "${CMAKE_EXE_LINKER_FLAGS} -flto")
  set(CMAKE_SHARED_LINKER_FLAGS
    "${CMAKE_SHARED_LINKER_FLAGS} -flto")
  set(CMAKE_MODULE_LINKER_FLAGS
    "${CMAKE_MODULE_LINKER_FLAGS} -flto")
endif()

include_directories(/usr/include/glib-2.0)
include_directories(/usr/lib/x86_64-linux-gnu/glib-2.0/include)

include_directories(${Qt5Widgets_INCLUDE_DIRS})
include_directories(${Qt5Multimedia_INCLUDE_DIRS})
include_directories(${Qt5Xml_INCLUDE_DIRS})
include_directories(${Qt5PrintSupport_INCLUDE_DIRS})

include_directories(libretroshare/src)
include_directories(openpgpsdk/src)
include_directories(libresapi/src)
include_directories(libbitdht/src)
include_directories(retroshare-gui/src)
include_directories(retroshare-gui/src/retroshare-gui)

aux_source_directory(libbitdht/src/bitdht LIBBITDHT_SOURCES)
aux_source_directory(libbitdht/src/udp LIBBITDHT_SOURCES)
aux_source_directory(libbitdht/src/util LIBBITDHT_SOURCES)

aux_source_directory(openpgpsdk/src/openpgpsdk OPENPGPSDK_SOURCES)

aux_source_directory(libresapi/src/api LIBRESAPI_SOURCES)
aux_source_directory(libresapi/src/util LIBRESAPI_SOURCES)

aux_source_directory(libretroshare/src/chat LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/dbase LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/dht LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/ft LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/grouter LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/gxs LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/gxstunnel LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/pgp LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/plugins LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/pqi LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/retroshare LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/rsserver LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/serialiser LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/services LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/services/mail LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/tcponudp LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/turtle LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/upnp LIBRETROSHARE_SOURCES)
aux_source_directory(libretroshare/src/util LIBRETROSHARE_SOURCES)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/rsserver/p3photo.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/pqi/p3dhtmgr.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/pqi/authssltest.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/pqi/authgpgtest.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/rsserver/p3rank.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/services/p3tunnel.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/upnp/upnptest.cc)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/upnp/upnputil.c)
list(REMOVE_ITEM LIBRETROSHARE_SOURCES libretroshare/src/upnp/upnphandler_miniupnp.cc)

add_library(bitdht STATIC ${LIBBITDHT_SOURCES})
add_library(openpgpsdk STATIC ${OPENPGPSDK_SOURCES})
add_library(resapi STATIC ${LIBRESAPI_SOURCES})
add_library(retroshare STATIC ${LIBRETROSHARE_SOURCES} openpgpsdk libbitdht)

aux_source_directory(retroshare-nogui/src NOGUI_SOURCES)
list(REMOVE_ITEM NOGUI_SOURCES retroshare-nogui/src/introserver.cc)

aux_source_directory(retroshare-gui/src GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/im_history GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/help/browser GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/FileTransfer GUI_SOURCES)
aux_source_directory(retroshare-gui/src/lang GUI_SOURCES)
aux_source_directory(retroshare-gui/src/util GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/profile GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/chat GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/connect GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/msgs GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/common GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/style GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/settings GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/statusbar GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/toaster GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/advsearch GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/elastic GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/feeds GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/groups GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/gxs GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/gxschannels GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/gxsforums GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/statistics GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/Identity GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/Circles GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/People GUI_SOURCES)
aux_source_directory(retroshare-gui/src/idle GUI_SOURCES)
aux_source_directory(retroshare-gui/src/images GUI_SOURCES)
aux_source_directory(retroshare-gui/src/gui/Posted GUI_SOURCES)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/CreateMsgLinkDialog.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/TrustView.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/util/framecatcher.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/util/TokenQueueVEG.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/statistics/dhtgraph.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/statistics/OutQueueStatistics.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/People/CircleItem.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/People/IdentityItem.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/PluginsPage.cpp)
list(REMOVE_ITEM GUI_SOURCES retroshare-gui/src/gui/People/GroupListView.cpp)

set(LIBRARIES retroshare resapi openpgpsdk bitdht ssl crypto dl pthread z bz2 ixml upnp ${SQLLIB} ${OPTIONAL_LIBS})

add_executable (RetroShare06-nogui ${NOGUI_SOURCES})
target_link_libraries(RetroShare06-nogui ${LIBRARIES})

add_executable (RetroShare06 ${GUI_SOURCES} retroshare-gui/src/gui/icons.qrc retroshare-gui/src/gui/images.qrc retroshare-gui/src/gui/emojione.qrc retroshare-gui/src/gui/Posted/Posted_images.qrc retroshare-gui/src/lang/lang.qrc retroshare-gui/src/gui/help/content/content.qrc retroshare-gui/src/gui/PhotoShare/Photo_images.qrc)
target_link_libraries(RetroShare06 retroshare ${LIBRARIES} microhttpd Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Multimedia Qt5::Xml Qt5::PrintSupport)

